# todo_app_api

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
deploys/: k8s_configmap.yaml  k8s_deployment.yaml  k8s_ingress.yaml  k8s_secret.yaml  k8s_service.yaml
src/: app.py
src/api/api_v1/: login.py  refresh_token.py  registers.py  tasks.py  users.py
src/api/api_v2/: users.py
src/core/: config.py
src/db/: db.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0451dd82bad8_initial_migration.py  735ac0e2cdfd_create_task_table.py  d8ad58b67115_create_task_table.py  fa4822915264_add_created_and_updated_date.py
src/models/: task.py  user.py
src/schemas/: login.py  register.py  tasks.py  token.py  users.py
src/services/auths/: basic_login.py  refresh_token.py
src/services/tasks/: create_task.py  delete_task.py  get_task.py  get_task_by_id.py  update_task.py
src/services/users/: __init__.py  create_user.py  get_user.py
src/utils/: jwt_token.py  time.py
src/utils/hashing/: encrypt.py
